--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
-    "start": "rimraf dist pkg && webpack-dev-server -d --host 0.0.0.0",
+    "start": "rimraf dist pkg && NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server -d --host 0.0.0.0",
     "test": "cargo test && wasm-pack test --headless"
   },
   "devDependencies": {
