--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ console_error_panic_hook = "0.1.5"
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console"]
+features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
