--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ lto = true
 # to interact with JavaScript.
 wasm-bindgen = "0.2.78"
 console_error_panic_hook = "0.1.5"
+rand = "0.8.4"
+getrandom = { version = "0.2.3", features = ["js"]}
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
