--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,16 +25,16 @@ wasm-bindgen = "0.2.78"
 console_error_panic_hook = "0.1.5"
 rand = "0.8.4"
 getrandom = { version = "0.2.3", features = ["js"]}
+futures = "0.3.18"
+wasm-bindgen-futures = "0.4.28"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"]
+features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement"]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
 wasm-bindgen-test = "0.3.28"
-futures = "0.3.18"
 js-sys = "0.3.55"
-wasm-bindgen-futures = "0.4.28"
