--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ wasm-bindgen-futures = "0.4.28"
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement"]
+features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlImageElement", "Response"]
 
 # These crates are used for running unit tests.
 [dev-dependencies]
